# attnflow

./: .coveragerc  .gitignore  LICENSE  README.md  comprehensive_test.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
attnflow/: __init__.py
attnflow/core/: __init__.py  memory_stats.py  tracker.py
attnflow/hooks/: __init__.py  transformer_hooks.py
attnflow/utils/: __init__.py  constants.py  logger.py
attnflow/viz/: __init__.py  cli_output.py  realtime_dashboard.py  visualizer.py
benchmarks/: benchmark_performance.py
demo/: __init__.py  attention_model.py  realtime_demo.py  simple_demo.py
docs/: README.md  en.md  zh-CN.md
tests/: __init__.py  test_cli_output.py  test_complete_requirements.py  test_hooks.py  test_integration.py  test_memory_stats.py  test_realtime_dashboard.py  test_tracker.py
