[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attnflow"
version = "0.1.0"
description = "Real-time Transformer Attention Memory Flow Visualization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AttnFlow Team", email = "team@attnflow.dev"}
]
keywords = [
    "attention",
    "transformer",
    "memory",
    "visualization",
    "pytorch",
    "deep-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=1.9.0",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-timeout>=1.4",
    "pytest-xdist>=2.0",
    "mypy>=0.910",
    "black>=21.5",
    "flake8>=3.9",
    "isort>=5.9",
]

test = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-timeout>=1.4",
]

[tool.setuptools]
packages = ["attnflow", "attnflow.core", "attnflow.hooks", "attnflow.utils", "attnflow.viz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --color=yes"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests",
    "performance: Performance benchmark tests",
    "slow: Tests that take significant time to run",
]
timeout = 300

[tool.mypy]
# Globally strict mode
strict = true
python_version = "3.8"

# Error handling
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Type strictness
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

# Optional type checking
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
strict_optional = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "matplotlib.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | buck-out
  | build
  | dist
  | tests
)/
'''

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
skip_glob = ".venv/*"

[tool.coverage.run]
source = ["attnflow"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "setup.py",
]
branch = true

[tool.coverage.report]
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abstract",
    "logger.debug",
    "logger.info",
    "@overload",
]
precision = 2
sort = "Cover"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
