[metadata]
name = attnflow
version = 0.1.0
description = Real-time Transformer Attention Memory Flow Visualization
author = AttnFlow Team
author_email = team@attnflow.dev
url = https://github.com/Terialion/attnflow
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.9.0
    numpy>=1.20.0
    matplotlib>=3.3.0

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.10
    pytest-timeout>=1.4
    pytest-xdist>=2.0
    mypy>=0.910
    black>=21.5
    flake8>=3.9
    isort>=5.9
    
test =
    pytest>=6.0
    pytest-cov>=2.10
    pytest-timeout>=1.4

[options.packages.find]
include = attnflow*

# ============================================================================
# Type Checking Configuration (mypy)
# ============================================================================
[mypy]
# Globally strict mode
strict = True

# Python version targeting
python_version = 3.8

# Per-module options
ignore_missing_imports = False

# Warnings
warn_return_any = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

# Error handling
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False

# Strictness
no_implicit_optional = True
no_implicit_reexport = True
strict_equality = True
strict_optional = True

# Plugins
plugins =
    numpy.typing.plugin_array_func

[mypy-tests.*]
# Tests don't need to be as strict
disallow_untyped_defs = False
disallow_untyped_calls = False
disallow_incomplete_defs = False

[mypy-torch.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

# ============================================================================
# Code Formatting (Black)
# ============================================================================
[black]
line-length = 100
target-version = py38,py39,py310,py311
include = \.pyi?$
extend-exclude = /(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|buck-out|build|dist|tests)/

# ============================================================================
# Linting (Flake8)
# ============================================================================
[flake8]
max-line-length = 100
max-complexity = 10
exclude =
    .git
    __pycache__
    build
    dist
    .eggs
    .tox
    .venv
    venv
    
ignore =
    E203  # whitespace before ':'
    E501  # line too long (handled by black)
    W503  # line break before binary operator

per-file-ignores =
    __init__.py: F401, F403

# ============================================================================
# Import Sorting (isort)
# ============================================================================
[isort]
profile = black
multi_line_mode = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 100
skip_glob = .venv/*
